cmake_minimum_required (VERSION 3.3)

# Add Modules.
add_subdirectory(Runtime)
add_subdirectory(RuntimeTest)
add_subdirectory(Core)
add_subdirectory(CoreTest)
add_subdirectory(Input)
add_subdirectory(Gfx)
add_subdirectory(GfxTest)
add_subdirectory(Image)
add_subdirectory(RectPack)
add_subdirectory(Font)
add_subdirectory(Renderer)
add_subdirectory(ImGui)
add_subdirectory(ImGuiDemo)
add_subdirectory(Asset)
add_subdirectory(EasyDraw)
add_subdirectory(EasyDrawDemo)
add_subdirectory(ObjLoader)
add_subdirectory(Scene)
add_subdirectory(3DEngine)
add_subdirectory(Texture)
add_subdirectory(Studio)